--- a/partials/family-vita.hbs
+++ b/partials/family-vita.hbs
@@ -1,15 +1,15 @@
-<div class="mx-auto grid grid-cols-1 lg:grid-cols-2 gap-10 items-center">
+<div class="mx-auto !py-90 grid grid-cols-1 gap-10 items-center">
   <!-- Left column: Image placeholder -->
-  <div class="w-full bg-gray-200 rounded-lg flex items-center justify-center">
+  <div class="w-full rounded-lg flex items-center justify-center">
     <!-- Replace src below with your image -->
     <img
       src="./assets/images/alemazung_family.jpg"
       alt="Portrait"
-      class="object-cover w-full h-full rounded-lg"
+      class="object-cover xl:w-2/3 h-full rounded-lg"
     />
   </div>
   <!-- Right column: Content -->
-  <ul class="text-gray-800 flex justify-center h-full flex-col">
+  <ul class="!mx-auto lg:w-2/3 2xl:w-1/2 text-gray-800 flex justify-center h-full flex-col">
     <li class="!border-b !border-gray-200 !py-10 !my-0 flex gap-x-4">
       <svg
         xmlns="http://www.w3.org/2000/svg"
