--- a/index.hbs
+++ b/index.hbs
@@ -77,22 +77,12 @@ into the {body} of the default.hbs template }}
   </div>
 </div>
 
-<section class="!mb-[280px] !mt-90 px-4 bg-white rounded-2xl">
+<section class="!mt-90 px-4 bg-white rounded-2xl">
   {{> "quote-leadership" }}
-  {{> "family-vita" }}
+  {{> "experience" }}
 </section>
 
-
-
-<section class="mx-20 xl:!mx-90 !mx-20 !my-90">
-  <h2 class="!py-20 !text-6xl">Kommunale und internationale Erfahrungen</h2>
-  <div class="grid xl:grid-cols-3 gap-y-20 gap-x-40">
-    <div class="shadow-lg !p-20 !border rounded-xl border-gray-600 !text-4xl leading-15">Zuständig für kommunale Entwicklung und Zusammenarbeit zwischen deutschen und griechischen Kommunen</div>
-    <div class="shadow-lg !p-20 !border rounded-xl border-gray-600 !text-4xl leading-15">Mehrjährige Erfahrung in kommunaler Entwicklungspolitik, Umsetzung der Agenda 2030 in den Kommunen</div>
-    <div class="shadow-lg !p-20 !border rounded-xl border-gray-600 !text-4xl leading-15" >Senior Berater und Referent für Frieden und Sicherheitspolitik am Global Governance Institute Brüssel, Belgien (www.globalgovernance.eu)</div>
-  </div>
-</div>
-
+{{> "family-vita" }}
 
 {{! The main content area }}
 <main id="site-main" class="site-main outer">
