--- a/partials/experience.hbs
+++ b/partials/experience.hbs
@@ -1,5 +1,5 @@
 <section class="bg-gradient-to-br from-gray-100 via-white to-gray-50 px-20 2xl:!px-90 !px-20 !py-90">
-  <h2 class="!py-20 !pt-0 !mt-0 !pb-40 !text-8xl text-[var(--ghost-accent-color)]">Kommunale und internationale<br>Erfahrungen</h2>
+  <h2 class="!py-20 !pt-0 !mt-0 !pb-40 !text-6xl lg:!text-8xl text-[var(--ghost-accent-color)]">Kommunale und internationale<br>Erfahrungen</h2>
   <div class="grid xl:grid-cols-3 gap-y-60 gap-x-20 2xl:gap-x-40">
     <div class="grid grid-cols-2 relative shadow-lg !p-10 !xl:p-20 !border rounded-xl !border-[var(--ghost-accent-color)] ">
       <image
@@ -16,7 +16,7 @@
       <image
         src="./assets/images/undraw_nature_yf30.svg"
         alt=""
-        class="absolute -top-20 right-10 rounded-xl mb-10 w-60"
+        class="absolute -top-20 -right-10 lg:right-10 rounded-xl mb-10 w-50 lg:w-60"
       />
       <div>
         <h4 class="!text-xl !m-0 !p-0 !pb-5 text-gray-500 uppercase">Entwicklungspolitik</h4>
