Adjust colors in undraw images, reorder

--- a/partials/experience.hbs
+++ b/partials/experience.hbs
@@ -3,31 +3,31 @@
   <div class="grid xl:grid-cols-3 gap-y-60 gap-x-20 2xl:gap-x-40">
     <div class="grid grid-cols-2 relative shadow-lg !p-10 !xl:p-20 !border rounded-xl !border-[var(--ghost-accent-color)] ">
       <image
-        src="./assets/images/undraw_appreciate-it_aans.svg"
-        alt=""
-        class="z-10 absolute -top-20 -right-10 rounded-xl mb-10 w-80"
-      />
-        <h4 class="!col-span-2 !text-xl !m-0 !p-0 !pb-5 text-gray-500 uppercase">Deutsch-Griechischer Austausch</h4>
-      <div class="">
-        <div class="2xl:!text-3xl leading-12">Zuständig für kommunale Entwicklung und Zusammenarbeit zwischen deutschen und griechischen Kommunen</div>
-      </div>
-    </div>
-    <div class="grid grid-cols-2 relative shadow-lg !p-10 !xl:p-20 !border rounded-xl !border-[var(--ghost-accent-color)] ">
-      <image
         src="./assets/images/undraw_nature_yf30.svg"
         alt=""
-        class="absolute -top-20 -right-10 lg:right-10 rounded-xl mb-10 w-50 lg:w-60"
+        class="absolute -top-20 -right-10 rounded-xl mb-10 w-50 lg:w-60"
       />
       <div>
         <h4 class="!text-xl !m-0 !p-0 !pb-5 text-gray-500 uppercase">Entwicklungspolitik</h4>
         <div class="!z-20 2xl:!text-3xl leading-12">Mehrjährige Erfahrung in kommunaler Entwicklungspolitik, Umsetzung der Agenda 2030 in den Kommunen</div>
       </div>
     </div>
+    <div class="grid grid-cols-2 relative shadow-lg !p-10 !xl:p-20 !border rounded-xl !border-[var(--ghost-accent-color)] ">
+      <image
+        src="./assets/images/undraw_appreciate-it_aans.svg"
+        alt=""
+        class="z-10 absolute -top-20 -right-15 rounded-xl mb-10 w-80"
+      />
+        <h4 class="!col-span-2 !text-xl !m-0 !p-0 !pb-5 text-gray-500 uppercase">Deutsch-Griechischer Austausch</h4>
+      <div class="">
+        <div class="2xl:!text-3xl leading-12">Zuständig für kommunale Entwicklung und Zusammenarbeit zwischen deutschen und griechischen Kommunen</div>
+      </div>
+    </div>
     <div class="relative shadow-lg !p-10 !xl:p-20 !border rounded-xl !border-[var(--ghost-accent-color)]">
       <image
         src="./assets/images/undraw_small-town_76a2.svg"
         alt=""
-        class="absolute -top-30 right-10 rounded-xl mb-10 w-80"
+        class="absolute -top-30 right-5 rounded-xl mb-10 w-80"
       />
       <div>
         <h4 class="!text-xl !m-0 !p-0 !pb-5 text-gray-500 uppercase">Friedenspolitik</h4>
