--- a/index.hbs
+++ b/index.hbs
@@ -2,49 +2,54 @@
 {{! The tag above means: insert everything in this file
 into the {body} of the default.hbs template }}
 
+<div>
+    <div class="z-50 !absolute top-0 !w-full !h-30 !bg-gradient-to-b from-black/80 via-black/30 to-transparent">
+    </div>
 <div
   class="!z-40 lg:relative !mb-96 lg:!mb-[350px] !h-[90vh] site-header-content
   outer{{#match @custom.header_style "Left aligned"}} left-aligned{{/match}}{{#unless @custom.show_publication_cover}}{{#match @custom.header_style "Hidden"}} no-content{{/match}}{{/unless}}"
 >
 
-  {{#if @custom.show_publication_cover}}
-    {{#if @site.cover_image}}
-      {{! This is a responsive image, it loads different sizes depending on device
-            https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 }}
-      <img
-        class="site-header-cover"
-        srcset="{{img_url @site.cover_image size="s"}} 300w,
-                        {{img_url @site.cover_image size="m"}} 600w,
-                        {{img_url @site.cover_image size="l"}} 1000w,
-                        {{img_url @site.cover_image size="xl"}} 2000w"
-        sizes="100vw"
-        src="{{img_url @site.cover_image size="xl"}}"
-        alt="{{@site.title}}"
-      />
-    {{/if}}
-  {{/if}}
-
-  {{#match @custom.header_style "!=" "Hidden"}}
-    <div class="site-header-inner !mb-30 xl:!mb-96 inner">
-      {{#match @custom.navigation_layout "Logo on cover"}}
-        {{#if @site.logo}}
-          <img class="site-logo" src="{{@site.logo}}" alt="{{@site.title}}" />
-        {{else}}
-          <h1 class="site-title">{{@site.title}}</h1>
-        {{/if}}
-      {{/match}}
-      {{#if @site.description}}
-        <p class="site-description">{{@site.description}}</p>
+    {{#if @custom.show_publication_cover}}
+      {{#if @site.cover_image}}
+        {{! This is a responsive image, it loads different sizes depending on device
+              https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 }}
+        <img
+          class="site-header-cover"
+          srcset="{{img_url @site.cover_image size="s"}} 300w,
+                          {{img_url @site.cover_image size="m"}} 600w,
+                          {{img_url @site.cover_image size="l"}} 1000w,
+                          {{img_url @site.cover_image size="xl"}} 2000w"
+          sizes="100vw"
+          src="{{img_url @site.cover_image size="xl"}}"
+          alt="{{@site.title}}"
+        />
       {{/if}}
-    </div>
-  {{/match}}
+    {{/if}}
 
-  <div
-    class="hidden xl:block relative xl:absolute lg:shadow-xl text-black rounded-2xl xl:-bottom-96 bg-white !m-20 "
-  >
-    {{> "header-entry-menu" }}
-  </div>
+    {{#match @custom.header_style "!=" "Hidden"}}
+      <div class="site-header-inner 2xl:right-20 !mb-30 xl:!mb-96 inner">
+        {{#match @custom.navigation_layout "Logo on cover"}}
+          {{#if @site.logo}}
+            <img class="site-logo" src="{{@site.logo}}" alt="{{@site.title}}" />
+          {{else}}
+            <h1 class="site-title">{{@site.title}}</h1>
+          {{/if}}
+        {{/match}}
+        {{#if @site.description}}
+          <p class="site-description">{{@site.description}}</p>
+        {{/if}}
+      </div>
+    {{/match}}
+
+    <div
+      class="hidden xl:block relative xl:absolute lg:shadow-xl text-black rounded-2xl xl:-bottom-96 bg-white !m-20 "
+    >
+      {{> "header-entry-menu" }}
+    </div>
 </div>
+</div>
+
 
 <div
   class="!z-50 xl:hidden relative -top-120 xl:absolute shadow-xl text-black rounded-2xl xl:-bottom-80 bg-white !m-10 grid"
