--- a/partials/family-vita.hbs
+++ b/partials/family-vita.hbs
@@ -25,7 +25,7 @@
       ><path d="M12 6v12" /><path d="M17.196 9 6.804 15" /><path
           d="m6.804 9 10.392 6"
         /></svg>
-      Geboren in Schwäbisch Gmünd mit kamerunischen Wurzeln, Jahrgang 1974
+      Gmünder mit kamerunischen Wurzeln, Jahrgang 1974
     </li>
     <li class="!border-b !border-gray-200 !py-10 !my-0 flex gap-x-4">
       <svg
